// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Login/LoginCard LoginCard renders correctly 1`] = `
.glamor-5 {
  max-width: 40rem;
  margin: 0 1rem;
}

.glamor-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.glamor-0 {
  color: #f44336;
  text-align: center;
  padding: 1rem;
}

.glamor-1 {
  padding-bottom: 1rem;
}

.glamor-4 {
  width: 100%;
}

@media (min-width:600px) {
  .glamor-5 {
    margin: 0 auto;
  }
}

<div
  className="MuiPaper-root-1 MuiPaper-shadow2-5 MuiPaper-rounded-2 glamor-5"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiCardContent-root-28 glamor-3"
    >
      <div
        className="glamor-0"
      />
      <div
        className="MuiFormControl-root-29 glamor-1"
        onBlur={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <label
          className="MuiFormLabel-root-39 MuiInputLabel-root-33 MuiInputLabel-formControl-34 MuiInputLabel-animated-37"
          data-shrink={false}
          htmlFor="username"
        >
          Username
        </label>
        <div
          className="MuiInput-root-43 MuiInput-formControl-44 MuiInput-inkbar-45 MuiInput-underline-51"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-47 MuiInput-inputSingleline-54"
            defaultValue={undefined}
            disabled={false}
            id="username"
            name="username"
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiFormControl-root-29 glamor-1"
        onBlur={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <label
          className="MuiFormLabel-root-39 MuiInputLabel-root-33 MuiInputLabel-formControl-34 MuiInputLabel-animated-37"
          data-shrink={false}
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="MuiInput-root-43 MuiInput-formControl-44 MuiInput-inkbar-45 MuiInput-underline-51"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-47 MuiInput-inputSingleline-54"
            defaultValue={undefined}
            disabled={false}
            id="password"
            name="password"
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="Password"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="MuiCardActions-root-58"
    >
      <button
        className="MuiButtonBase-root-74 MuiButton-root-60 MuiCardActions-actionSpacing-59 glamor-4"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        type="submit"
      >
        <span
          className="MuiButton-label-62"
        >
          Login
        </span>
        <span
          className="MuiTouchRipple-root-76"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`pages/Login/LoginCard mapStateToProps should return errors if there are errors 1`] = `
Object {
  "errorStatus": Object {
    "message": "Invalid Credentials",
  },
  "initialValues": Object {
    "username": "flexget",
  },
}
`;

exports[`pages/Login/LoginCard mapStateToProps should return no errors if there are none 1`] = `
Object {
  "errorStatus": Object {},
  "initialValues": Object {
    "username": "flexget",
  },
}
`;
